2008-02-13  Ingo Renner  <ingo@typo3.org>

	* removed ugly background color from save buttons in docheader when they were focused
	* fixed syntax error in t3editor
	* whitespace cleanup in t3editor javascript files
	* fixed bug where FF3 would load the content frame into the complete window, leaving the user without module menu and toolbar

2008-02-12  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed Bug #7388: CSS Gremlins

2008-02-12  Thomas Hempek  <thomas@typo3-unleashed.net>

	* code cleanup and bugfix patch for t3editor / preparation for review (Thanks to Tobias Liebig)

2008-02-12  Oliver Hader  <oh@inpublica.de>

	* Cleanup of t3lib/stddb/tbl_be.php

2008-02-11  Benjamin Mack  <mack@xnos.org>

	* Fixed Follow up for bug #6825: TCEforms: Icon for empty palettes should not be displayed -- palettes fields were not shown
	* Fixed Bug #7463: missing descriptions in backend user editor (Thanks to Steffen Kamper, followup to Issue #6921)

2008-02-11  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7495: Various issues with nested lists in htmlArea RTE

2008-02-11  Ingo Renner  <ingo@typo3.org>

	* removed legacy code from backend.php

2008-02-11  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug: Fixed global variables in typo3/backend.php
	* (feature) Added feature #5068: Integrate mod.web_list.deniedNewTables as opposite of allowedNewTables

2008-02-08  Oliver Hader  <oh@inpublica.de>

	* (trivial) Fixed bug #7458: Wrong alternative text on create new page icon above page tree
	* (minor) Fixed bug #7466: Clear cache actions in top bar cause JS error
	* (minor) Fixed bug #7460: Search field in top bar causes JS error

2008-02-08  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7450 (revisited): further corrections to localization of htmlArea RTE
	* Fixed bug #7468: htmlArea RTE QuickTag plugin refusing to open dialogue in IE

2008-02-08  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0beta1a
