@@ -1,3 +1,7 @@
+2008-02-13  Benjamin Mack  <mack@xnos.org>
+
+	* Cleanup (wrong global statement) in new TYPO3AJAX class
+
 2008-02-13  Ingo Renner  <ingo@typo3.org>
 
 	* removed ugly background color from save buttons in docheader when they were focused
